--- a/MyExercises/fragments/src/main/res/values/strings.xml
+++ b/MyExercises/fragments/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">ActivityLifeTime</string>
+    <string name="app_name">Fragments</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_second">SecondActivity</string>
+    <string name="title_activity_dynamic_frag">DynamicFragActivity</string>
 </resources>
